--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
 }
 
 header{
+    /* display: none; */
     position: absolute;
     top: 0;
     left: 0;
@@ -64,10 +65,11 @@ header ul{
 .change .bar3{
     transform: translate(0, -11px) rotate(45deg);
 }
-
+/* 
 header #nav-menu-bar.menu-active{
     right: 0;
-}
+    width: 100%;
+} */
 header ul{
     margin-bottom: 0;
 }
@@ -417,6 +419,9 @@ section img#mountains_front{
 
 
 @media screen and (max-width: 768px){
+    /* header{
+        width: 100%;
+    } */
     .menu-hamburger{ 
         display: inline-block;
     }
@@ -428,10 +433,11 @@ section img#mountains_front{
         transform: translateY(75px);
     }
     .nav-menu{ 
+        width: 0;
         position: absolute;
         top: 90px;
-        right: -500px;
-        padding: 2rem 2rem;
+        right: 0; 
+        padding: 0;
         line-height: 50px;
         min-height: 100vh;
         background-color: #1c0522;
@@ -439,9 +445,21 @@ section img#mountains_front{
         flex-direction: column;
         justify-content: start;
         align-items: end;
-        transition: .5s;  
+        transition: .2s;  
         z-index: 11000;
     } 
+    .nav-menu li a{
+        display: none;
+    }
+    header #nav-menu-bar.menu-active{
+        width: max-content;
+        right: 0;  
+        padding: 2rem 2rem;
+        transition: .2s;
+    }
+    header #nav-menu-bar.menu-active.nav-menu li a{
+        display: inline;
+    }
     .sec h2{ 
         font-size: 1.8em;
         margin-bottom: 10px; 
